Adding the first version of the rapid7 Nexpose documentation

--- a/html/pfappserver/lib/pfappserver/I18N/en.po
+++ b/html/pfappserver/lib/pfappserver/I18N/en.po
@@ -10679,6 +10679,10 @@ msgid "pf_domain"
 msgstr "Domain"
 
 # pf::factory::detect::parser (Detect Parsers)
+msgid "pfdetect_type_nexpose"
+msgstr "Nexpose"
+
+# pf::factory::detect::parser (Detect Parsers)
 msgid "pfdetect_type_dhcp"
 msgstr "DHCP"
 
