--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -32,6 +32,7 @@ Enhancements
 * (AD Powershell scripts) Enforce use of TLS in the powershell scripts which is required with the last versions of PF (PR #2788)
 * (AD Powershell scripts) Cycle through all the possible Active Directory usernames formats in PacketFence (PR #2788)
 * Removed old authentication code sources (Fixes #2610)
+* Added rule description in listing (Fixes #2619)
 
 Bug Fixes
 +++++++++
